# learn-vulkan

./: Cargo.toml  lib.rs  notes.md  planning.md  readme.md
src/: camera.rs  lib.rs  light.wgsl  main.rs  model.rs  resources.rs  shader.wgsl  texture.rs
