[package]
name = "learn-vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Other dependencies
reqwest = { version = "0.11" }
web-sys = { version = "0.3", features = [
	"Document",
	"Window",
	"Element",
	"Location",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob ="0.3"

[dependencies]
winit = "0.27"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
pollster = "0.2"
bytemuck = { version = "1.12", features = [ "derive" ]}
anyhow = "1.0"
cgmath = "0.18"
tobj = { version = "3.2.1", features = [
	"async",
]}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]


